--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@shopify/polaris": "^3.10.0",
     "@zeit/next-css": "^1.0.1",
     "apollo-boost": "^0.3.1",
+    "cheerio": "^1.0.0-rc.3",
     "dotenv": "^6.2.0",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
+    "html-entities": "^1.2.1",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.0",
     "koa": "^2.7.0",
