--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Shopify/shopify-demo-app-node-react#readme",
   "dependencies": {
+    "@koa/cors": "^3.0.0",
     "@shopify/app-bridge": "^1.3.0",
     "@shopify/app-bridge-react": "^1.6.7",
     "@shopify/koa-shopify-auth": "^3.1.24",
@@ -38,6 +39,7 @@
     "js-cookie": "^2.2.0",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
+    "koa-cors": "0.0.16",
     "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
     "koa-session": "^5.10.1",
@@ -45,6 +47,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.6.7",
     "next": "^8.0.3",
+    "node-schedule": "^1.3.2",
     "react": "^16.8.4",
     "react-apollo": "^2.5.2",
     "react-dom": "^16.8.4",
