--- a/package.json
+++ b/package.json
@@ -38,6 +38,12 @@
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.0",
     "koa": "^2.7.0",
+    "react-bootstrap": "^1.0.0-beta.5",
+    "react-bootstrap-daterangepicker": "^4.1.0",
+    "bootstrap": "^4.3.1",
+    "bootstrap-daterangepicker": "^3.0.5",
+    "jquery": "^3.4.1",
+    "react-scripts": "2.1.5",
     "koa-bodyparser": "^4.2.1",
     "koa-cors": "0.0.16",
     "koa-router": "^7.4.0",
